rubocop/examples/good/style_OneLineConditional.rb
# Favor the ternary operator(?:) over if/then/else/end constructs.
#   It's more common and obviously more concise. [link]

# good
result = some_condition ? something : something_else
