rubocop/examples/bad/style_OneLineConditional.rb
# Favor the ternary operator(?:) over if/then/else/end constructs.
#   It's more common and obviously more concise. [link]

# bad
result = if some_condition then something else something_else end
